# markmap

./: .gitignore  AGENTS.md  Cargo.toml  GEMINI.md  README.md  knowlattice.code-workspace  package.json  project-context.md  test.md  tsconfig.base.json
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/api/src/command/: document.rs  export.rs  folder.rs  ids.rs  index.rs  markmap.rs  markmap_edit.rs  markmap_edit_anchors.rs  markmap_edit_resolved_ast.rs  mod.rs  ping.rs  render.rs  search.rs  workspace.rs
crates/api/src/dispatch/: codec.rs  context.rs  defaults.rs  handler.rs  mod.rs  pipeline.rs  registry.rs  response.rs  router.rs
crates/api/src/dto/: document.rs  export.rs  folder.rs  index.rs  markmap.rs  markmap_edit.rs  markmap_edit_anchors.rs  markmap_edit_ast.rs  markmap_edit_resolved_ast.rs  mod.rs  render.rs  search.rs  workspace.rs
crates/api/src/error/: mapper.rs  mod.rs
crates/services/: Cargo.toml
crates/services/src/: builder.rs  error.rs  lib.rs
crates/services/src/config/: loader.rs  mod.rs  service.rs
crates/services/src/document/: mod.rs  scan.rs  service.rs
crates/services/src/edit/: mod.rs
crates/services/src/export/: mod.rs  service.rs
crates/services/src/index/: apply.rs  mod.rs  node_sink.rs  node_type_records.rs  parse.rs  pipeline.rs  queue.rs  read.rs  service.rs
crates/services/src/node_types/: loader.rs  lookup.rs  mod.rs
crates/services/src/render/: document.rs  html.rs  markdown.rs  markmap.rs  mod.rs
crates/services/src/search/: mod.rs  service.rs
crates/services/src/workspace/: attach_folder.rs  attach_folder_import.rs  create_workspace.rs  detach_folder.rs  file_tree.rs  get_current_workspace.rs  list_workspace.rs  mod.rs  recent_files.rs  service.rs  switch_workspace.rs  update_workspace_config_overrides.rs
crates/services/tests/: attach_folder_import.rs  get_current_workspace.rs  recent_files.rs  setup.rs  workspace_file_tree.rs  workspace_state.rs
crates/storage/: Cargo.toml
crates/storage/migrations/: 0001_init.sql  0002_add_node_types.sql  0003_update_node_table.sql  0004_add_text_node_type.sql  0005_add_node_link_type.sql  0006_add_node_link_ref_id.sql  0007_add_workspace_state.sql  0008_add_node_footnote_definition.sql  0009_add_user_settings.sql
crates/storage/src/: error.rs  factory.rs  lib.rs  provider.rs
crates/storage/src/fs/: fs_storage.rs  mod.rs
crates/storage/src/mapper/: document.rs  folder.rs  mod.rs  user_settings.rs  workspace.rs  workspace_recent_files.rs  workspace_state.rs
crates/storage/src/repo/: document_repo.rs  folder_repo.rs  mod.rs  user_settings_repo.rs  workspace_recent_files_repo.rs  workspace_repo.rs  workspace_state_repo.rs
crates/storage/src/sqlite/: mod.rs  pool.rs
crates/storage/tests/: all.rs  setup.rs
crates/storage/tests/cases/: document_repo.rs  folder_repo.rs  (+15 more)
(+475 files in other folders)
