[workspace]
resolver = "2"
members = ["src-tauri", "crates/*"]

[workspace.dependencies]
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
thiserror = "^2"
chrono = { version = "^0.4", features = ["serde"] }
uuid = { version = "^1", features = ["v7", "serde"] }
tracing = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["env-filter", "json"] }
sqlx = { version = "^0.8", features = ["sqlite", "runtime-tokio", "migrate"] }
async-trait = "^0.1"
pulldown-cmark = "^0.13"
comrak = "^0.23"
