[package]
name = "knowlattice-services"
version = "0.1.0"
edition = "2021"

[dependencies]
knowlattice-core = { path = "../core" }
knowlattice-storage = { path = "../storage" }
knowlattice-search = { path = "../search" }
knowlattice-export = { path = "../export" }
common = { package = "knowlattice-common", path = "../common" }
comrak = { workspace = true }
ammonia = { workspace = true }
sqlx = { workspace = true }
async-trait = { workspace = true }
tokio = { version = "1", features = ["fs", "rt", "sync", "macros"] }
ignore = "0.4"
tracing = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
