[package]
name = "knowlattice-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
knowlattice-core = { path = "../core" }
common = { package = "knowlattice-common", path = "../common" }
sqlx = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { version = "^1", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { workspace = true }
